Add explicit width and height attributes to tech icons to improve CLS

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -17,37 +17,37 @@ const t = useTranslations(lang);
         <div class="tech-grid">
           <div class="tech-item" data-aos="fade-up" data-aos-delay="150">
             <div class="tech-icon">
-              <img src="/images/tech/html5.svg" alt="HTML5" />
+              <img src="/images/tech/html5.svg" alt="HTML5" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">HTML5</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="200">
             <div class="tech-icon">
-              <img src="/images/tech/css3.svg" alt="CSS3" />
+              <img src="/images/tech/css3.svg" alt="CSS3" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">CSS3</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="250">
             <div class="tech-icon">
-              <img src="/images/tech/javascript.svg" alt="JavaScript" />
+              <img src="/images/tech/javascript.svg" alt="JavaScript" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">JavaScript</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="300">
             <div class="tech-icon">
-              <img src="/images/tech/typescript.svg" alt="TypeScript" />
+              <img src="/images/tech/typescript.svg" alt="TypeScript" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">TypeScript</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="350">
             <div class="tech-icon">
-              <img src="/images/tech/react.svg" alt="React" />
+              <img src="/images/tech/react.svg" alt="React" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">React</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="400">
             <div class="tech-icon">
-              <img src="/images/tech/vue.svg" alt="Vue.js" />
+              <img src="/images/tech/vue.svg" alt="Vue.js" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Vue.js</div>
           </div>
@@ -71,37 +71,37 @@ const t = useTranslations(lang);
         <div class="tech-grid">
           <div class="tech-item" data-aos="fade-up" data-aos-delay="600">
             <div class="tech-icon">
-              <img src="/images/tech/nodejs.svg" alt="Node.js" />
+              <img src="/images/tech/nodejs.svg" alt="Node.js" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Node.js</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="650">
             <div class="tech-icon">
-              <img src="/images/tech/php.svg" alt="PHP" />
+              <img src="/images/tech/php.svg" alt="PHP" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">PHP</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="700">
             <div class="tech-icon">
-              <img src="/images/tech/csharp.svg" alt="C#" />
+              <img src="/images/tech/csharp.svg" alt="C#" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">C#</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="750">
             <div class="tech-icon">
-              <img src="/images/tech/dotnet.svg" alt=".NET" />
+              <img src="/images/tech/dotnet.svg" alt=".NET" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">.NET</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="800">
             <div class="tech-icon">
-              <img src="/images/tech/mysql.svg" alt="MySQL" />
+              <img src="/images/tech/mysql.svg" alt="MySQL" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">MySQL</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="850">
             <div class="tech-icon">
-              <img src="/images/tech/sqlserver.svg" alt="SQL Server" />
+              <img src="/images/tech/sqlserver.svg" alt="SQL Server" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">SQL Server</div>
           </div>
@@ -113,37 +113,37 @@ const t = useTranslations(lang);
         <div class="tech-grid">
           <div class="tech-item" data-aos="fade-up" data-aos-delay="950">
             <div class="tech-icon">
-              <img src="/images/tech/git.svg" alt="Git" />
+              <img src="/images/tech/git.svg" alt="Git" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Git</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1000">
             <div class="tech-icon">
-              <img src="/images/tech/docker.svg" alt="Docker" />
+              <img src="/images/tech/docker.svg" alt="Docker" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Docker</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1050">
             <div class="tech-icon">
-              <img src="/images/tech/aws.svg" alt="AWS" />
+              <img src="/images/tech/aws.svg" alt="AWS" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">AWS</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1100">
             <div class="tech-icon">
-              <img src="/images/tech/figma.svg" alt="Figma" />
+              <img src="/images/tech/figma.svg" alt="Figma" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Figma</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1150">
             <div class="tech-icon">
-              <img src="/images/tech/vscode.svg" alt="VS Code" />
+              <img src="/images/tech/vscode.svg" alt="VS Code" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">VS Code</div>
           </div>
           <div class="tech-item" data-aos="fade-up" data-aos-delay="1200">
             <div class="tech-icon">
-              <img src="/images/tech/jira.svg" alt="Jira" />
+              <img src="/images/tech/jira.svg" alt="Jira" width="40" height="40" loading="lazy" />
             </div>
             <div class="tech-name">Jira</div>
           </div>
@@ -301,8 +301,9 @@ const t = useTranslations(lang);
   }
 
   .tech-icon img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
     transition: transform 0.3s ease;
   }
 
@@ -418,6 +419,11 @@ const t = useTranslations(lang);
     .tech-icon {
       width: 40px;
       height: 40px;
+    }
+
+    .tech-icon img {
+      width: 32px;
+      height: 32px;
     }
 
     .tech-name {
